kubernetes/manifests/servie.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-spy
  namespace: spy
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    kubernetes.io/app: spy
